--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 <body>
 		<!-- Enable moving through our page  -->
 		<div id="app">
-		  <the-header></the-header>
+		  <the-header @register="openSignIn" ></the-header>
 			<router-view>	</router-view>
 		</div>
 
@@ -20,12 +20,14 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<!-- Libs includes -->
 	<script src="js/vue.js"></script>
+	<script src="js/vuex.js"></script>
 	<script src="js/vue-router.js"></script>
 	<script src="js/axios.js"></script>
 
 	<script src="app/components/header.js"></script>
 	<script src="app/components/city.js"></script>
 	<script src="app/components/places.js"></script>
+	<script src="app/components/baseDialog.js"></script>
 	<script src="app/views/home.js"></script>
 	<script  src="app/app.js"></script>
 
