dodat submit pomocu axios-a

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 <body>
 		<!-- Enable moving through our page  -->
 		<div id="app">
-		  <the-header @register="openSignIn" ></the-header>
+		  <the-header></the-header>
 			<router-view>	</router-view>
 		</div>
 
@@ -29,6 +29,7 @@
 	<script src="app/components/places.js"></script>
 	<script src="app/components/baseDialog.js"></script>
 	<script src="app/views/home.js"></script>
+	<script  src="app/store/registration.js"></script>
 	<script  src="app/app.js"></script>
 
 </body>
