--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,6 +30,7 @@
 	<script src="app/components/baseDialog.js"></script>
 	<script src="app/views/home.js"></script>
 	<script  src="app/store/registration.js"></script>
+	<script  src="app/store/login.js"></script>
 	<script  src="app/app.js"></script>
 
 </body>
