--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,7 +26,8 @@
 
 	<script src="app/components/header.js"></script>
 	<script src="app/components/city.js"></script>
-	<script src="app/components/places.js"></script>
+	<script src="app/components/baseOnlineRestaurant.js"></script>
+	<script src="app/components/onlineRestaurants.js"></script>
 	<script src="app/components/baseDialog.js"></script>
 	<script src="app/views/home.js"></script>
 	<script  src="app/store/registration.js"></script>
