dodat back za slobodne menadzere

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,7 +29,6 @@
 	<script src="app/components/baseOnlineRestaurant.js"></script>
 	<script src="app/components/onlineRestaurants.js"></script>
 	<script src="app/components/baseDialog.js"></script>
-	<script src="app/components/createRestaurant.js"></script>
 
 	<script src="app/views/home.js"></script>
 	<script src="app/views/profile.js"></script>
@@ -39,6 +38,7 @@
 	<script  src="app/store/user.js"></script>
 	<script  src="app/store/registration.js"></script>
 	<script  src="app/store/login.js"></script>
+	<script  src="app/store/manager.js"></script>
 
 	<script  src="app/app.js"></script>
 
