--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -39,6 +39,7 @@
 	<script  src="app/store/registration.js"></script>
 	<script  src="app/store/login.js"></script>
 	<script  src="app/store/manager.js"></script>
+	<script  src="app/store/restaurant.js"></script>
 
 	<script  src="app/app.js"></script>
 
