dodat prikaz restorana i prikaz jednog restorana

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,6 +34,7 @@
 	<script src="app/views/profile.js"></script>
 	<script src="app/views/administratorCRUD.js"></script>
 	<script src="app/views/createRestaurant.js"></script>
+	<script src="app/views/restaurantPage.js"></script>
 
 	<script  src="app/store/user.js"></script>
 	<script  src="app/store/registration.js"></script>
