--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,6 +29,7 @@
 	<script src="app/components/baseOnlineRestaurant.js"></script>
 	<script src="app/components/onlineRestaurants.js"></script>
 	<script src="app/components/baseDialog.js"></script>
+		<script src="app/components/baseArticle.js"></script>
 
 	<script src="app/views/home.js"></script>
 	<script src="app/views/profile.js"></script>
