--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,13 +29,15 @@
 	<script src="app/components/baseOnlineRestaurant.js"></script>
 	<script src="app/components/onlineRestaurants.js"></script>
 	<script src="app/components/baseDialog.js"></script>
-		<script src="app/components/baseArticle.js"></script>
+	<script src="app/components/baseArticle.js"></script>
 
 	<script src="app/views/home.js"></script>
 	<script src="app/views/profile.js"></script>
 	<script src="app/views/administratorCRUD.js"></script>
 	<script src="app/views/createRestaurant.js"></script>
 	<script src="app/views/restaurantPage.js"></script>
+	<script src="app/views/createArticle.js"></script>
+	<script src="app/views/showUsers.js"></script>
 
 	<script  src="app/store/user.js"></script>
 	<script  src="app/store/registration.js"></script>
