prikaz korisnika zavrsen

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,6 +30,7 @@
 	<script src="app/components/onlineRestaurants.js"></script>
 	<script src="app/components/baseDialog.js"></script>
 	<script src="app/components/baseArticle.js"></script>
+	<script src="app/components/baseUser.js"></script>
 
 	<script src="app/views/home.js"></script>
 	<script src="app/views/profile.js"></script>
