--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -45,6 +45,7 @@
 	<script  src="app/store/manager.js"></script>
 	<script  src="app/store/restaurants.js"></script>
 	<script  src="app/store/restaurant.js"></script>
+	<script  src="app/store/restaurantArticles.js"></script>
 
 	<script  src="app/app.js"></script>
 
