--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -44,8 +44,9 @@
 	<script  src="app/store/registration.js"></script>
 	<script  src="app/store/login.js"></script>
 	<script  src="app/store/manager.js"></script>
-	<script  src="app/store/restaurants.js"></script>
 	<script  src="app/store/restaurant.js"></script>
+	<script  src="app/store/restaurants.js"></script>
+	<script  src="app/store/cart.js"></script>
 
 	<script  src="app/app.js"></script>
 
