--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,7 @@
 	<script src="app/views/createRestaurant.js"></script>
 	<script src="app/views/restaurantPage.js"></script>
 	<script src="app/views/createArticle.js"></script>
+	<script src="app/views/updateArticle.js"></script>
 	<script src="app/views/showUsers.js"></script>
 
 	<script  src="app/store/user.js"></script>
