--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,7 @@
 	<script src="app/views/restaurantPage.js"></script>
 	<script src="app/views/createArticle.js"></script>
 	<script src="app/views/showUsers.js"></script>
+	<script src="app/views/cartPage.js"></script>
 
 	<script  src="app/store/user.js"></script>
 	<script  src="app/store/registration.js"></script>
@@ -46,6 +47,7 @@
 	<script  src="app/store/restaurants.js"></script>
 	<script  src="app/store/restaurant.js"></script>
 	<script  src="app/store/restaurantArticles.js"></script>
+	<script  src="app/store/cart.js"></script>
 
 	<script  src="app/app.js"></script>
 
