--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -50,6 +50,7 @@
 	<script  src="app/store/restaurants.js"></script>
 	<script  src="app/store/restaurantArticles.js"></script>
 	<script  src="app/store/cart.js"></script>
+  <script  src="app/store/orders.js"></script>
 
 	<script  src="app/app.js"></script>
 
