dodavanje i odobravanje komentara i ocena

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -32,6 +32,7 @@
 	<script src="app/components/baseArticle.js"></script>
 	<script src="app/components/baseUser.js"></script>
 	<script src="app/components/baseOrder.js"></script>
+		<script src="app/components/baseComment.js"></script>
 
 	<script src="app/views/home.js"></script>
 	<script src="app/views/profile.js"></script>
@@ -43,6 +44,7 @@
 	<script src="app/views/showUsers.js"></script>
 	<script src="app/views/cartPage.js"></script>
 	<script src="app/views/ordersPage.js"></script>
+	<script  src="app/views/managerComments.js"></script>
 
 	<script  src="app/store/user.js"></script>
 	<script  src="app/store/registration.js"></script>
